Changes to Functional Requirements
Changed a bit of formatting and info, made sure the categories were
isolated.

--- a/functionalReq.html
+++ b/functionalReq.html
@@ -5,28 +5,32 @@
 		<meta charset='utf-8'>
 	</head>
 	<body>
+		<h1>Functional Requirements</h1>
+		<h2>Group Members: Baldwin, Chunda, Ian</h2>
+		<h3>Subject: Note Taking App</h3>
 		<ul>
 			<li>Input Text<ul>
-				<li>Ability for user to type text in and enter it at press of button</li>
+				<li>Ability for user to type text via normal keyboard procedures</li>
+				<li>Possible ability to attach a date/time and/or alert to that text</li>
 			</ul></li>
 			<li>Save Notes(string of text)<ul>
-				<li>Save text to be displayed, eidited or deleted</li>
+				<li>Ability to save the text with one button press, to be displayed, edited or deleted</li>
 			</ul></li>
 			<li>Display notes in a list<ul>
-				<li>Ability for user to see list of saved notes</li>
+				<li>Ability for user to see list of all saved notes</li>
+				<li>(Display only the first X number of characters, then expand?)</li>
+				<li>Notes should be ordered newest to oldest (top to bottom)</li>
 			</ul></li>
 			<li>Delete note in list<ul>
-				<li>Ability to deletes notes in list of notes</li>
-				<li>Could be done with button on side of the note</li>
-				<li>Could be done with an addtional menu accessed by long press</li>
+				<li>Ability to  notes in list of notes</li>
 			</ul></li>
 			<li>Edit previously saved note<ul>
-				<li>Ability to deletes notes in list of notes</li>
-				<li>Could be done with button on side of the note</li>
-				<li>Could be done with an addtional menu accessed by long press</li>
+				<li>Ability to edit notes in list of notes</li>
 			</ul></li>
-			<li>Long Press Menu<ul>
-				<li>How does that work?</li>
+			<li>Long Press Menu or button menu<ul>
+				<li>Buttons next to listed notes could be used to edit or delete.</li>
+				<li>(How does this function work on Android?) Small pop-up on long-press with edit and delete buttons</li>
+				<li>This can be one or the other.</li>
 			</ul></li>
 		</ul>
 	</body>
